--- a/src/styles.css
+++ b/src/styles.css
@@ -28,7 +28,6 @@ body {
   border-radius: 10px;
 }
 li {
-  text-transform: capitalize;
   list-style: none;
   margin: 0;
   padding: 0;
@@ -36,6 +35,9 @@ li {
 ul {
   margin: 0;
   padding: 0;
+}
+li:first-letter {
+  text-transform: capitalize;
 }
 .description {
   padding: 25px;
