--- a/src/styles.css
+++ b/src/styles.css
@@ -62,3 +62,18 @@ li:first-letter {
   font-size: 16px;
   top: -32px;
 }
+.weather-forecast {
+  margin-top: 20px;
+  text-align: center;
+}
+.weather-forecast-date {
+  font-size: 16px;
+  color: #000;
+  opacity: 0.6;
+}
+.weather-forecast-temperature {
+  font-size: 13px;
+}
+.weather-forecast-temperature-min {
+  opacity: 0.6;
+}
